--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'org.openjfx.javafxplugin' version '0.0.9'
+    id 'application'
 }
 
 group 'org.example'
@@ -22,3 +23,4 @@ javafx {
 test {
     useJUnitPlatform()
 }
+mainClassName = 'ucf.assignments.App'
